[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "astacus"
authors = [
  { name="Aiven", email="opensource@aiven.io" },
]
description = "Astacus, cluster (database) backup tool"
readme = "README.md"
requires-python = ">=3.11"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries",
]
license = { text = "Apache License 2.0" }
dynamic = ["version"]
dependencies = [
    "fastapi",
    "httpx",
    "msgspec",
    "kazoo",
    "protobuf < 3.21",
    "pydantic < 2",
    "pyyaml",
    "rohmu >= 2.7.0",
    "sentry-sdk",
    "starlette",
    "tabulate",
    "typing-extensions >= 4.7.1; python_version < '3.12'",
    "uvicorn",
    "wcmatch",
]

[project.optional-dependencies]
cassandra = [
    "cassandra-driver == 3.20.2",
]
f39 = [
    "cramjam == 2.8.3",
    "cryptography == 41.0.7",
    "fastapi == 0.103.0",
    "h11 == 0.14.0",
    "httpcore == 0.17.3",
    "httplib2 == 0.21.0",
    "httpx == 0.24.1",
    "msgspec == 0.18.6",
    "kazoo == 2.8.0",
    "protobuf == 3.19.6",
    "pyasyncore == 1.0.2",
    # pydantic on Fedora 39 is actually 1.10.14.
    # rohmu requires pydantic >= 1.10.17 because of the "v1" namespace broken compatibility.
    "pydantic == 1.10.17",
    "pyyaml == 6.0.1",
    "requests == 2.28.2",
    "starlette == 0.27.0",
    "tabulate == 0.9.0",
    "uritemplate == 4.1.1",
    "urllib3 == 1.26.18",
    "uvicorn == 0.23.2",
    "wcmatch == 8.4.1",
    "zstandard == 0.21.0",
]
f40 = [
    "cramjam == 2.8.3",
    "cryptography == 41.0.7",
    "fastapi == 0.111.1",
    "h11 == 0.14.0",
    "httpcore == 1.0.2",
    "httplib2 == 0.21.0",
    "httpx == 0.26.0",
    "msgspec == 0.18.6",
    "kazoo == 2.8.0",
    "protobuf == 3.19.6",
    "pyasyncore == 1.0.2",
    # pydantic on Fedora 40 is actually v2.
    "pydantic == 1.10.17",
    "pyyaml == 6.0.1",
    "requests == 2.31.0",
    "tabulate == 0.9.0",
    "uritemplate == 4.1.1",
    "uvicorn == 0.23.2",
    "wcmatch == 8.5.2",
    "zstandard == 0.22.0",
]
dev = [
    # Needed by pre-commit to lint and test the project
    "pre-commit>=3.7.0",
    "anyio==3.5.0",
    "pylint==3.0.4",
    "pytest-cov==3.0.0",
    "pytest-mock==3.10.0",
    "pytest-order==1.0.0",
    "pytest-timeout==2.1.0",
    "pytest-watch==4.2.0",
    "pytest==7.2.2",
    "mypy==1.9.0",
    # Types for things that don't seem to have them
    "types-botocore>=1.0.2",
    "types-PyYAML>=6.0.12.2",
    "types-requests>=2.28.11.5",
    "types-tabulate>=0.9.0.0",
    "types-ujson>=5.9.0.0",
    "types-urllib3>=1.26.25.4",
    # F38
    "coverage==7.0.5",
    "freezegun>=1.2",
    "respx==0.20.1",
]

[project.urls]
"Homepage" = "https://github.com/Aiven-Open/astacus"
"Bug Tracker" = "https://github.com/Aiven-Open/astacus/issues"

[project.scripts]
astacus = "astacus.main:main"


[tool.hatch.version]
source = "vcs"

[tool.isort]
no_sections = true
force_alphabetical_sort = true
combine_as_imports = true
profile = "black"
skip_gitignore = true
line_length = 125

[tool.hatch.build.hooks.vcs]
version-file = "astacus/version.py"

[tool.coverage.run]
# Gather statistics per invocation
parallel = true

# We're only interested about Astacus core, not rohmu/..
#
# (tests is listed here mostly so that we can detect unused utility functions in them)
source = [
     "astacus",
     "tests"
]
