[metadata]
name = astacus
description = Astacus, cluster (database) backup tool
long_description = file: README.md
url= https://github.com/aiven/astacus/

[options]
zip_safe = False

# SKIP-IN-RPM
install_requires =
  PyYAML==6.0
  fastapi==0.86.0
  httpx==0.22.0
  protobuf==3.19.4
  rohmu>=2.1.0,<2.2
  sentry-sdk==1.6.0
  tabulate==0.9.0
  typing-extensions==4.7.1
  uvicorn==0.15.0
  wcmatch==8.4.1
  # Pinned transitive deps
  pydantic==1.10.2

  # Clickhouse support
  kazoo==2.8.0
